# rust-kafka-consumer

./: Cargo.toml  README.md
src/: constants.rs  logger.rs  main.rs  observable_pattern.rs  service_utils.rs  services.rs
src/constants/: consumer_constants.rs
src/observable/: observable_pattern.rs
src/services/: test_service.rs
