[package]
name = "rust-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build"] }
chrono = "0.4.0"
clap = "2.18.0"
env_logger = "0.9.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
log = { version = "0.4", features = ["std", "serde"] }
futures = "0.3"
